# Matchmove_machine_site

./: .env.example  .env.prod  docker-compose.prod.yaml  docker-compose.yml  dump.rdb
backend/: backend.dockerfile  celery.dockerfile  pyproject.toml
backend/apps/cart/: models.py  services.py
backend/apps/cart/api/: urls.py
backend/apps/cart/migrations/: 0001_initial.py  0002_remove_cartitem_quantity.py
backend/apps/exeptions/: api_exeptions.py
backend/apps/oauth/api/: urls.py
backend/apps/orders/: models.py  services.py
backend/apps/orders/api/: urls.py
backend/apps/orders/migrations/: 0001_initial.py  0002_alter_order_id.py  0002_order_is_paid_order_transaction_id.py  0003_alter_order_id.py  0003_remove_orderitem_quantity.py  0004_remove_order_uuid.py
backend/apps/payments/: services.py
backend/apps/payments/api/: urls.py
backend/apps/payments/services/: data_preparers.py  paddle_webhook_service.py  transaction_service.py
backend/apps/products/: admin.py  forms.py  services.py  tasks.py
backend/apps/products/api/: urls.py
backend/apps/products/migrations/: 0001_initial.py  0002_alter_camera_options_alter_file_options_and_more.py  0006_file_name.py  (+6 more)
backend/apps/tutorials/: admin.py  models.py
backend/apps/user/: admin.py  managers.py  models.py  serializers.py  urls.py  validators.py
backend/apps/users/: admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py
backend/apps/utils/: pagination.py
backend/cart/: models.py
backend/config/: celery.py  redoc.py  settings.py  urls.py
(+251 files in other folders)
